<resources>
    <string name="app_name">Bubûche</string>
    <string name="btListeArbres">Liste des arbres</string>
    <string name="btImportData">Importation des données</string>
    <string name="btExportData">Exportation des données</string>
    <string name="tvListeArbres">Liste des arbres</string>
    <string name="tvIdArbre">ID</string>
    <string name="tvEspeceArbre">Espèce</string>
    <string name="tvCpArbre">CP</string>
    <string name="tvDetailsArbre">Détails</string>
    <string name="tvLibIdArbre" />
    <string name="tvLibEspeceArbre" />
    <string name="tvLibCpArbre" />
    <string name="tvLibDetailsArbre" />
    <string name="tvFicheArbre">Fiche arbre</string>
    <string name="btAccueilFicheArbre"></string>
    <string name="tvIdFicheArbre">ID :</string>
    <string name="tvDataIdFicheArbre" />
    <string name="tvCommuneFicheArbre">Commune :</string>
    <string name="tvDataCommuneFicheArbre" />
    <string name="tvDatePlantaFicheArbre">Date plantation :</string>
    <string name="tvDataDatePlantaFicheArbre" />
    <string name="tvGenreFicheArbre">Genre :</string>
    <string name="tvDataGenreFicheArbre" />
    <string name="tvEspeceFicheArbre">Espèce :</string>
    <string name="tvDataEspeceFicheArbre" />
    <string name="tvListeInterventionsFicheArbre">Liste interventions</string>
    <string name="tvIdInterventionFicheArbre">ID</string>
    <string name="tvTypeInterventionFicheArbre">Type</string>
    <string name="tvDateInterventionFicheArbre">Date</string>
    <string name="tvDetailsInterventionFicheArbre">Détails</string>
    <string name="btCreerIntervention">Créer intervention</string>
    <string name="tvLibIdIntervention" />
    <string name="tvLibTypeIntervention" />
    <string name="tvLibDateIntervention" />
    <string name="tvFicheIntervention">Fiche intervention</string>
    <string name="btAccueilFicheIntervention"></string>
    <string name="tvIdFicheIntervention">ID :</string>
    <string name="tvIdArbreFicheIntervention">ID arbre :</string>
    <string name="tvDataIdArbreFicheIntervention" />
    <string name="tvTypeFicheIntervention">Type :</string>
    <string name="tvDataTypeFicheIntervention" />
    <string name="tvDateFicheIntervention">Date :</string>
    <string name="tvHeureFicheIntervention">Heure :</string>
    <string name="tvDataHeureFicheIntervention" />
    <string name="tvObsFicheIntervention">Observations :</string>
    <string name="mtObsFicheIntervention" />
    <string name="tvCreationIntervention">Création intervention</string>
    <string name="tvCreationInterventionIdArbre">ID arbre concerné</string>
    <string name="ptTypeIntervention">Type intervention</string>
    <string name="ptHeureCreationIntervention">Heure</string>
    <string name="ptDateCreationIntervention">Date</string>
    <string name="mtObsCreationIntervention">Entrer une observation</string>
    <string name="btCreationIntervention">Créer</string>
    <string name="title_activity_envoi_data">EnvoiDataActivity</string>
    <string name="tvLibelleFicheArbre" >Libellé :</string>
    <string name="tvDataLibelleFicheArbre" />
    <string name="tvDataDateFicheIntervention" />/>
</resources>
