<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aurelienthazet.bubuche.CreationInterventionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvCreationIntervention"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/tvCreationIntervention"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btAccueilCreerIntervention"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_set_as" />

            <Space
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <EditText
            android:id="@+id/ptTypeIntervention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptTypeIntervention"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ptDateCreationIntervention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptDateCreationIntervention"
            android:inputType="date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ptHeureCreationIntervention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ptHeureCreationIntervention"
            android:inputType="time"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/mtObsCreationIntervention"
            android:layout_width="match_parent"
            android:layout_height="249dp"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/mtObsCreationIntervention"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btCreationIntervention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btCreationIntervention" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
