<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLibIdIntervention"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/tvLibIdIntervention"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLibTypeIntervention"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/tvLibTypeIntervention"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLibDateIntervention"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/tvLibDateIntervention"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>